--- a/next/package.json
+++ b/next/package.json
@@ -21,6 +21,7 @@
     "gsap": "^3.10.4",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "mongoose": "^6.3.3",
     "next": "^12.1.5",
     "next-redux-saga": "^4.1.2",
     "next-redux-wrapper": "^7.0.5",
